Fixed action button alignments

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   font-weight: 400;
   font-size: 18px;
   color: #0d090a;
-  background-color: #fff;
+  background-color: #fdf0d5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
